Fixed group name

--- a/tasks/plasma.yml
+++ b/tasks/plasma.yml
@@ -7,7 +7,7 @@
       - '@Core'
       - '@Fonts'
       - '@Hardware Support'
-      - '@KDE (K Desktop Environment)'
+      - '@KDE'
       - '@Printing Support'
       - '@Standard'
       - '@base-x'
