--- a/tasks/vscode.yml
+++ b/tasks/vscode.yml
@@ -19,4 +19,4 @@
     - name: Install Visual Studio Code
       ansible.builtin.dnf:
         name: code
-        state: latest
+        state: present
